crates/wdl-analysis/tests/validation/float-out-of-range/source.errors
error: literal float exceeds the range for a 64-bit float (-1.7976931348623157e308..=+1.7976931348623157e308)
   ┌─ tests/validation/float-out-of-range/source.wdl:14:12
   │
14 │         h: 1234.1234e1234
   │            ^^^^^^^^^^^^^^ this literal float is not in range

error: literal float exceeds the range for a 64-bit float (-1.7976931348623157e308..=+1.7976931348623157e308)
   ┌─ tests/validation/float-out-of-range/source.wdl:15:12
   │
15 │         i: -1234.1234e1234
   │            ^^^^^^^^^^^^^^^ this literal float is not in range

error: literal float exceeds the range for a 64-bit float (-1.7976931348623157e308..=+1.7976931348623157e308)
   ┌─ tests/validation/float-out-of-range/source.wdl:25:15
   │
25 │     Float h = 1234.1234e1234
   │               ^^^^^^^^^^^^^^ this literal float is not in range

error: literal float exceeds the range for a 64-bit float (-1.7976931348623157e308..=+1.7976931348623157e308)
   ┌─ tests/validation/float-out-of-range/source.wdl:26:15
   │
26 │     Float i = -1234.1234e1234
   │               ^^^^^^^^^^^^^^^ this literal float is not in range

